fix: fixed demo links in mobile version and navigation overlaps

--- a/style.css
+++ b/style.css
@@ -70,7 +70,7 @@ h4 {
   grid-template-columns: repeat(8, 1fr);
 }
 .grid-layout .grid-nav {
-  grid-column: 1/3;
+  grid-column: 0/2;
   grid-row: span 6;
 }
 .grid-layout .grid-content-main {
@@ -322,7 +322,17 @@ textarea {
   width: 60%;
   background-color: #808080;
 }
-
+@media screen and (max-width: 478px) {
+  html {
+    font-size: 16px;
+  }
+  .side-wrapper-mobile img {
+    height: 20%;
+    width: 30%;
+    padding: 0 0 0 2rem;
+    margin: 0 0rem 0 2rem;
+  }
+}
 @media screen and (max-width: 992px) {
   html {
     font-size: 17px;
